@@ -20,12 +20,11 @@
 package org.xwiki.mail.integration;
 
 import java.security.Security;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Properties;
 
 import javax.inject.Provider;
-import javax.mail.BodyPart;
 import javax.mail.Message.RecipientType;
 import javax.mail.Multipart;
 import javax.mail.Session;
@@ -104,7 +103,7 @@ import static org.mockito.Mockito.when;
     FileSystemMailContentStore.class
 })
 // @formatter:on
-public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
+class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
 {
     private static final String PERMDIR = "target/" + AuthenticatingIntegrationTest.class.getSimpleName();
 
@@ -128,7 +127,7 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
     private MailSender sender;
 
     @BeforeComponent
-    public void registerConfiguration() throws Exception
+    void registerConfiguration() throws Exception
     {
         this.greenMail.start();
 
@@ -153,8 +152,8 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
         this.componentManager.registerMockComponent(ExecutionContextManager.class);
         this.componentManager.registerMockComponent(Execution.class);
 
-        this.componentManager.registerMockComponent(new DefaultParameterizedType(null, Copier.class,
-            ExecutionContext.class));
+        this.componentManager
+            .registerMockComponent(new DefaultParameterizedType(null, Copier.class, ExecutionContext.class));
 
         EnvironmentConfiguration environmentConfiguration =
             this.componentManager.registerMockComponent(EnvironmentConfiguration.class);
@@ -162,14 +161,13 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
     }
 
     @BeforeEach
-    public void initialize() throws Exception
+    void initialize() throws Exception
     {
         // Create a user in the SMTP server.
         this.greenMail.setUser("peter@doe.com", "peter", "password");
 
-        this.defaultBodyPartFactory =
-            this.componentManager.getInstance(new DefaultParameterizedType(null, MimeBodyPartFactory.class,
-                String.class));
+        this.defaultBodyPartFactory = this.componentManager
+            .getInstance(new DefaultParameterizedType(null, MimeBodyPartFactory.class, String.class));
         this.sender = this.componentManager.getInstance(MailSender.class);
 
         // Simulate receiving the Application Ready Event to start the mail threads
@@ -179,7 +177,7 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
     }
 
     @AfterEach
-    public void cleanUp() throws Exception
+    void cleanUp() throws Exception
     {
         logCapture.ignoreAllMessages();
 
@@ -193,7 +191,7 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
     }
 
     @Test
-    public void sendTextMail() throws Exception
+    void sendTextMail() throws Exception
     {
         // Set the EC
         Execution execution = this.componentManager.getInstance(Execution.class);
@@ -222,23 +220,24 @@ public class AuthenticatingIntegrationTest extends AbstractMailIntegrationTest
         Multipart multipart = new MimeMultipart("mixed");
         // Add text in the body
         multipart.addBodyPart(this.defaultBodyPartFactory.create("some text here",
-            Collections.<String, Object>singletonMap("mimetype", "text/plain")));
+            Collections.singletonMap("mimetype", "text/plain")));
         message.setContent(multipart);
 
         // Step 4: Send the mail
-        this.sender.sendAsynchronously(Arrays.asList(message), session, null);
+        this.sender.sendAsynchronously(List.of(message), session, null);
 
         // Verify that the mail has been received (wait maximum 30 seconds).
         this.greenMail.waitForIncomingEmail(30000L, 1);
-        MimeMessage[] messages = this.greenMail.getReceivedMessages();
+        jakarta.mail.internet.MimeMessage[] messages = this.greenMail.getReceivedMessages();
 
         assertEquals(1, messages.length);
         assertEquals("subject", messages[0].getHeader("Subject", null));
         assertEquals("john@doe.com", messages[0].getHeader("To", null));
 
-        assertEquals(1, ((MimeMultipart) messages[0].getContent()).getCount());
+        assertEquals(1, ((jakarta.mail.internet.MimeMultipart) messages[0].getContent()).getCount());
 
-        BodyPart textBodyPart = ((MimeMultipart) messages[0].getContent()).getBodyPart(0);
+        jakarta.mail.BodyPart textBodyPart =
+            ((jakarta.mail.internet.MimeMultipart) messages[0].getContent()).getBodyPart(0);
         assertEquals("text/plain", textBodyPart.getHeader("Content-Type")[0]);
         assertEquals("some text here", textBodyPart.getContent());
     }
