@@ -20,7 +20,6 @@
 package org.xwiki.search.solr.internal.reference;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -29,10 +28,8 @@ import java.util.Map;
 import javax.inject.Provider;
 
 import org.hamcrest.Matchers;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.xwiki.context.Execution;
 import org.xwiki.context.ExecutionContext;
 import org.xwiki.context.internal.DefaultExecution;
@@ -48,7 +45,9 @@ import org.xwiki.query.QueryManager;
 import org.xwiki.query.internal.DefaultQuery;
 import org.xwiki.test.annotation.BeforeComponent;
 import org.xwiki.test.annotation.ComponentList;
-import org.xwiki.test.mockito.MockitoComponentManagerRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectComponentManager;
+import org.xwiki.test.mockito.MockitoComponentManager;
 import org.xwiki.wiki.descriptor.WikiDescriptorManager;
 
 import com.xpn.xwiki.XWiki;
@@ -65,6 +64,8 @@ import com.xpn.xwiki.web.Utils;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
@@ -72,9 +73,10 @@ import static org.mockito.Mockito.when;
 
 /**
  * Tests for the extraction of indexable references from a start reference.
- * 
+ *
  * @version $Id$
  */
+@ComponentTest
 @ComponentList({
     DefaultExecution.class,
     AttachmentSolrReferenceResolver.class,
@@ -86,10 +88,10 @@ import static org.mockito.Mockito.when;
     WikiSolrReferenceResolver.class,
 })
 @ReferenceComponentList
-public class SolrReferenceResolverTest
+class SolrReferenceResolverTest
 {
-    @Rule
-    public final MockitoComponentManagerRule mocker = new MockitoComponentManagerRule();
+    @InjectComponentManager
+    private MockitoComponentManager componentManager;
 
     private SolrReferenceResolver defaultSolrReferenceResolver;
 
@@ -99,43 +101,43 @@ public class SolrReferenceResolverTest
 
     private WikiReference wikiReference1 = new WikiReference("wiki1");
 
-    private SpaceReference spaceReference11 = new SpaceReference("data", new SpaceReference("space11", wikiReference1));
+    private SpaceReference spaceReference11 = new SpaceReference("data", new SpaceReference("space11", this.wikiReference1));
 
-    private DocumentReference classReference111 = new DocumentReference("class111", spaceReference11);
+    private DocumentReference classReference111 = new DocumentReference("class111", this.spaceReference11);
 
-    private DocumentReference documentReference111 = classReference111;
+    private DocumentReference documentReference111 = this.classReference111;
 
     private BaseClass xclass111;
 
     private XWikiDocument xdocument111;
 
-    private DocumentReference documentReference112 = new DocumentReference("document112", spaceReference11);
+    private DocumentReference documentReference112 = new DocumentReference("document112", this.spaceReference11);
 
     private XWikiDocument xdocument112;
 
-    private DocumentReference documentReference113 = new DocumentReference("document113", spaceReference11);
+    private DocumentReference documentReference113 = new DocumentReference("document113", this.spaceReference11);
 
-    private DocumentReference documentReference113RO = new DocumentReference(documentReference113, new Locale("ro"));
+    private DocumentReference documentReference113RO = new DocumentReference(this.documentReference113, new Locale("ro"));
 
     private XWikiDocument xdocument113 = null;
 
-    private SpaceReference spaceReference12 = new SpaceReference("code", new SpaceReference("space12", wikiReference1));
+    private SpaceReference spaceReference12 = new SpaceReference("code", new SpaceReference("space12", this.wikiReference1));
 
-    private DocumentReference documentReference121 = new DocumentReference("document121", spaceReference12);
+    private DocumentReference documentReference121 = new DocumentReference("document121", this.spaceReference12);
 
     private AttachmentReference attachmentReference1211 = new AttachmentReference("attachment1211.ext",
-        documentReference121);
-
-    private XWikiAttachment xattachment1211;
+        this.documentReference121);
 
     private AttachmentReference attachmentReference1212 = new AttachmentReference("attachment1212.ext",
-        documentReference121);
+        this.documentReference121);
+
+    private XWikiAttachment xattachment1211;
 
     private XWikiAttachment xattachment1212;
 
     private XWikiDocument xdocument121;
 
-    private DocumentReference documentReference122 = new DocumentReference("document122", spaceReference12);
+    private DocumentReference documentReference122 = new DocumentReference("document122", this.spaceReference12);
 
     private BaseObjectReference objectReference1221;
 
@@ -155,29 +157,29 @@ public class SolrReferenceResolverTest
 
     private XWikiDocument xdocument122;
 
-    private SpaceReference spaceReference13 = new SpaceReference("test", new SpaceReference("space13", wikiReference1));
+    private SpaceReference spaceReference13 = new SpaceReference("test", new SpaceReference("space13", this.wikiReference1));
 
     private WikiReference wikiReference2 = new WikiReference("wiki2");
 
     private QueryManager queryManager;
 
     @BeforeComponent
-    public void registerComponents() throws Exception
+    void registerComponents() throws Exception
     {
-        this.mocker.registerMockComponent(XWikiContext.TYPE_PROVIDER);
-        this.mocker.registerMockComponent(QueryManager.class);
+        this.componentManager.registerMockComponent(XWikiContext.TYPE_PROVIDER);
+        this.componentManager.registerMockComponent(QueryManager.class);
 
-        WikiDescriptorManager wikiDescriptorManager = this.mocker.registerMockComponent(WikiDescriptorManager.class);
+        WikiDescriptorManager wikiDescriptorManager = this.componentManager.registerMockComponent(WikiDescriptorManager.class);
         when(wikiDescriptorManager.getAllIds()).thenReturn(
-            Arrays.asList(wikiReference1.getName(), wikiReference2.getName()));
+            List.of(this.wikiReference1.getName(), this.wikiReference2.getName()));
     }
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp() throws Exception
     {
-        this.defaultSolrReferenceResolver = this.mocker.getInstance(SolrReferenceResolver.class);
+        this.defaultSolrReferenceResolver = this.componentManager.getInstance(SolrReferenceResolver.class);
 
-        Utils.setComponentManager(this.mocker);
+        Utils.setComponentManager(this.componentManager);
 
         // XWiki
 
@@ -191,12 +193,12 @@ public class SolrReferenceResolverTest
 
         // XWikiContext Provider
 
-        Provider<XWikiContext> xcontextProvider = this.mocker.getInstance(XWikiContext.TYPE_PROVIDER);
+        Provider<XWikiContext> xcontextProvider = this.componentManager.getInstance(XWikiContext.TYPE_PROVIDER);
         when(xcontextProvider.get()).thenReturn(this.xcontext);
 
         // XWikiContext trough Execution
 
-        Execution execution = this.mocker.getInstance(Execution.class);
+        Execution execution = this.componentManager.getInstance(Execution.class);
         execution.setContext(new ExecutionContext());
         execution.getContext().setProperty(XWikiContext.EXECUTIONCONTEXT_KEY, this.xcontext);
 
@@ -204,8 +206,8 @@ public class SolrReferenceResolverTest
 
         this.objectReference1221 = new BaseObjectReference(this.classReference111, 0, this.documentReference122);
         this.objectReference1222 = new BaseObjectReference(this.classReference111, 1, this.documentReference122);
-        this.propertyReference12221 = new ObjectPropertyReference("aStringProperty", objectReference1222);
-        this.propertyReference12223 = new ObjectPropertyReference("anIntegerProperty", objectReference1222);
+        this.propertyReference12221 = new ObjectPropertyReference("aStringProperty", this.objectReference1222);
+        this.propertyReference12223 = new ObjectPropertyReference("anIntegerProperty", this.objectReference1222);
 
         // XWiki model data
 
@@ -224,7 +226,7 @@ public class SolrReferenceResolverTest
         this.xproperty12221 = mock(StringProperty.class, "xwikiProperty12221");
         this.xproperty12223 = mock(IntegerProperty.class, "xwikiProperty12223");
 
-        this.queryManager = this.mocker.getInstance(QueryManager.class);
+        this.queryManager = this.componentManager.getInstance(QueryManager.class);
         final Query spacesWiki1Query = mock(DefaultQuery.class, "getSpacesWiki1");
         final Query documentsSpace11Query = mock(DefaultQuery.class, "getSpaceDocsNameSpace11");
         final Query documentsSpace12Query = mock(DefaultQuery.class, "getSpaceDocsNameSpace12");
@@ -233,344 +235,349 @@ public class SolrReferenceResolverTest
 
         // Data
 
-        when(xwiki.exists(any(DocumentReference.class), any(XWikiContext.class))).thenReturn(true);
+        when(this.xwiki.exists(any(DocumentReference.class), any(XWikiContext.class))).thenReturn(true);
 
         // Query manager and specific queries mocking.
 
-        when(queryManager.getNamedQuery("getSpaces")).thenReturn(spacesWiki1Query);
+        when(this.queryManager.getNamedQuery("getSpaces")).thenReturn(spacesWiki1Query);
 
-        when(spacesWiki1Query.setWiki(wikiReference1.getName())).thenReturn(spacesWiki1Query);
+        when(spacesWiki1Query.setWiki(this.wikiReference1.getName())).thenReturn(spacesWiki1Query);
 
-        when(spacesWiki1Query.setWiki(wikiReference2.getName())).thenReturn(spacesWiki2Query);
+        when(spacesWiki1Query.setWiki(this.wikiReference2.getName())).thenReturn(spacesWiki2Query);
 
-        when(queryManager.getNamedQuery("getSpaceDocsName")).thenReturn(documentsSpace11Query);
+        when(this.queryManager.getNamedQuery("getSpaceDocsName")).thenReturn(documentsSpace11Query);
 
         when(documentsSpace11Query.setWiki(any(String.class))).thenReturn(documentsSpace11Query);
 
         EntityReferenceSerializer<String> localEntityReferenceSerializer =
-            this.mocker.getInstance(EntityReferenceSerializer.TYPE_STRING, "local");
-        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(spaceReference11)))
+            this.componentManager.getInstance(EntityReferenceSerializer.TYPE_STRING, "local");
+        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(this.spaceReference11)))
             .thenReturn(documentsSpace11Query);
-        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(spaceReference12)))
+        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(this.spaceReference12)))
             .thenReturn(documentsSpace12Query);
-        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(spaceReference13)))
+        when(documentsSpace11Query.bindValue("space", localEntityReferenceSerializer.serialize(this.spaceReference13)))
             .thenReturn(documentsSpace13Query);
 
         // Spaces in wikis.
         when(spacesWiki1Query.execute()).thenReturn(
-            Arrays.<Object>asList(localEntityReferenceSerializer.serialize(spaceReference11),
-                localEntityReferenceSerializer.serialize(spaceReference12),
-                localEntityReferenceSerializer.serialize(spaceReference13)));
+            List.of(localEntityReferenceSerializer.serialize(this.spaceReference11),
+                localEntityReferenceSerializer.serialize(this.spaceReference12),
+                localEntityReferenceSerializer.serialize(this.spaceReference13)));
 
-        when(spacesWiki2Query.execute()).thenReturn(Collections.emptyList());
+        when(spacesWiki2Query.execute()).thenReturn(List.of());
 
         // space 11
         when(documentsSpace11Query.execute()).thenReturn(
-            Arrays.<Object> asList(classReference111.getName(), documentReference112.getName(),
-                documentReference113.getName()));
+            List.of(this.classReference111.getName(), this.documentReference112.getName(),
+                this.documentReference113.getName()));
 
         // document 111
-        when(xwiki.getDocument(eq(documentReference111), any(XWikiContext.class))).thenReturn(xdocument111);
+        when(this.xwiki.getDocument(eq(this.documentReference111), any(XWikiContext.class))).thenReturn(this.xdocument111);
 
-        when(xdocument111.getXClass()).thenReturn(xclass111);
+        when(this.xdocument111.getXClass()).thenReturn(this.xclass111);
 
         // document 112
-        when(xwiki.getDocument(eq(documentReference112), any(XWikiContext.class))).thenReturn(xdocument112);
+        when(this.xwiki.getDocument(eq(this.documentReference112), any(XWikiContext.class))).thenReturn(this.xdocument112);
 
-        when(xdocument112.getXObjects()).thenReturn(Collections.<DocumentReference, List<BaseObject>>emptyMap());
+        when(this.xdocument112.getXObjects()).thenReturn(Map.of());
 
-        when(xdocument112.getTranslationLocales(any(XWikiContext.class))).thenReturn(Collections.<Locale>emptyList());
+        when(this.xdocument112.getTranslationLocales(any(XWikiContext.class))).thenReturn(List.of());
 
         // document 113
-        when(xwiki.getDocument(eq(documentReference113), any(XWikiContext.class))).thenReturn(xdocument113);
+        when(this.xwiki.getDocument(eq(this.documentReference113), any(XWikiContext.class))).thenReturn(this.xdocument113);
 
-        when(xdocument113.getAttachmentList()).thenReturn(Collections.<XWikiAttachment>emptyList());
+        when(this.xdocument113.getAttachmentList()).thenReturn(List.of());
 
-        when(xdocument113.getXObjects()).thenReturn(Collections.<DocumentReference, List<BaseObject>>emptyMap());
+        when(this.xdocument113.getXObjects()).thenReturn(Map.of());
 
-        when(xdocument113.getTranslationLocales(any(XWikiContext.class))).thenReturn(Arrays.asList(new Locale("ro")));
+        when(this.xdocument113.getTranslationLocales(any(XWikiContext.class))).thenReturn(List.of(new Locale("ro")));
 
         // space 12
         when(documentsSpace12Query.execute()).thenReturn(
-            Arrays.<Object> asList(documentReference121.getName(), documentReference122.getName()));
+            List.of(this.documentReference121.getName(), this.documentReference122.getName()));
 
         // document 121
-        when(xwiki.getDocument(eq(documentReference121), any(XWikiContext.class))).thenReturn(xdocument121);
+        when(this.xwiki.getDocument(eq(this.documentReference121), any(XWikiContext.class))).thenReturn(this.xdocument121);
 
-        when(xdocument121.getAttachmentList()).thenReturn(Arrays.asList(xattachment1211, xattachment1212));
+        when(this.xdocument121.getAttachmentList()).thenReturn(List.of(this.xattachment1211, this.xattachment1212));
 
-        when(xattachment1211.getReference()).thenReturn(attachmentReference1211);
+        when(this.xattachment1211.getReference()).thenReturn(this.attachmentReference1211);
 
-        when(xattachment1212.getReference()).thenReturn(attachmentReference1212);
+        when(this.xattachment1212.getReference()).thenReturn(this.attachmentReference1212);
 
-        when(xdocument121.getXObjects()).thenReturn(Collections.<DocumentReference, List<BaseObject>>emptyMap());
+        when(this.xdocument121.getXObjects()).thenReturn(Map.of());
 
-        when(xdocument121.getTranslationLocales(any(XWikiContext.class))).thenReturn(Collections.<Locale>emptyList());
+        when(this.xdocument121.getTranslationLocales(any(XWikiContext.class))).thenReturn(List.of());
 
         // document 122
-        when(xwiki.getDocument(eq(documentReference122), any(XWikiContext.class))).thenReturn(xdocument122);
+        when(this.xwiki.getDocument(eq(this.documentReference122), any(XWikiContext.class))).thenReturn(this.xdocument122);
 
-        when(xdocument122.getAttachmentList()).thenReturn(Collections.<XWikiAttachment>emptyList());
+        when(this.xdocument122.getAttachmentList()).thenReturn(List.of());
 
         Map<DocumentReference, List<BaseObject>> xObjects = new HashMap<DocumentReference, List<BaseObject>>();
         // Yes, it seems that we can have null objects for some reason.
-        xObjects.put(classReference111, Arrays.asList(null, xobject1221, xobject1222));
-        when(xdocument122.getXObjects()).thenReturn(xObjects);
+        xObjects.put(this.classReference111, Arrays.asList(null, this.xobject1221, this.xobject1222));
+        when(this.xdocument122.getXObjects()).thenReturn(xObjects);
 
-        when(xdocument122.getTranslationLocales(any(XWikiContext.class))).thenReturn(Collections.<Locale>emptyList());
+        when(this.xdocument122.getTranslationLocales(any(XWikiContext.class))).thenReturn(List.of());
 
         // object 1221
-        when(xdocument122.getXObject(objectReference1221)).thenReturn(xobject1221);
-        when(xdocument122.getXObject((EntityReference) objectReference1221)).thenReturn(xobject1221);
+        when(this.xdocument122.getXObject(this.objectReference1221)).thenReturn(this.xobject1221);
+        when(this.xdocument122.getXObject((EntityReference) this.objectReference1221)).thenReturn(this.xobject1221);
 
-        when(xobject1221.getReference()).thenReturn(objectReference1221);
+        when(this.xobject1221.getReference()).thenReturn(this.objectReference1221);
 
-        when(xobject1221.getXClass(any(XWikiContext.class))).thenReturn(xclass111);
+        when(this.xobject1221.getXClass(any(XWikiContext.class))).thenReturn(this.xclass111);
 
-        when(xobject1221.getFieldList()).thenReturn(Collections.EMPTY_LIST);
+        when(this.xobject1221.getFieldList()).thenReturn(List.of());
 
         // object 1222
-        when(xdocument122.getXObject(objectReference1222)).thenReturn(xobject1222);
-        when(xdocument122.getXObject((EntityReference) objectReference1222)).thenReturn(xobject1222);
+        when(this.xdocument122.getXObject(this.objectReference1222)).thenReturn(this.xobject1222);
+        when(this.xdocument122.getXObject((EntityReference) this.objectReference1222)).thenReturn(this.xobject1222);
 
-        when(xobject1222.getReference()).thenReturn(objectReference1222);
+        when(this.xobject1222.getReference()).thenReturn(this.objectReference1222);
 
-        when(xobject1222.getXClass(any(XWikiContext.class))).thenReturn(xclass111);
+        when(this.xobject1222.getXClass(any(XWikiContext.class))).thenReturn(this.xclass111);
 
-        when(xobject1222.getFieldList()).thenReturn(
-            Arrays.asList(xproperty12221, xproperty12223));
+        when(this.xobject1222.getFieldList()).thenReturn(
+            List.of(this.xproperty12221, this.xproperty12223));
 
         // object 1222 fields
-        when(xproperty12221.getReference()).thenReturn(propertyReference12221);
-        when(xproperty12221.getName()).thenReturn(propertyReference12221.getName());
+        when(this.xproperty12221.getReference()).thenReturn(this.propertyReference12221);
+        when(this.xproperty12221.getName()).thenReturn(this.propertyReference12221.getName());
 
-        when(xproperty12223.getReference()).thenReturn(propertyReference12223);
-        when(xproperty12223.getName()).thenReturn(propertyReference12223.getName());
+        when(this.xproperty12223.getReference()).thenReturn(this.propertyReference12223);
+        when(this.xproperty12223.getName()).thenReturn(this.propertyReference12223.getName());
 
         // class 111 fields
-        when(xclass111.get(propertyReference12221.getName())).thenReturn(null);
+        when(this.xclass111.get(this.propertyReference12221.getName())).thenReturn(null);
 
-        when(xclass111.get(propertyReference12223.getName())).thenReturn(null);
+        when(this.xclass111.get(this.propertyReference12223.getName())).thenReturn(null);
 
         // space 13
-        when(documentsSpace13Query.execute()).thenReturn(Collections.emptyList());
+        when(documentsSpace13Query.execute()).thenReturn(List.of());
     }
 
     // getReferences
     @Test
-    public void getReferencesFarm() throws Exception
+    void getReferencesFarm() throws Exception
     {
         Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(null);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(12));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(12));
 
         assertThat(
             result,
-            containsInAnyOrder(classReference111, documentReference112, documentReference113, documentReference113RO,
-                documentReference121, attachmentReference1211, attachmentReference1212, documentReference122,
-                objectReference1221, objectReference1222, propertyReference12221, propertyReference12223));
+            containsInAnyOrder(this.classReference111, this.documentReference112, this.documentReference113,
+                this.documentReference113RO, this.documentReference121, this.attachmentReference1211,
+                this.attachmentReference1212, this.documentReference122, this.objectReference1221,
+                this.objectReference1222, this.propertyReference12221, this.propertyReference12223));
     }
 
     @Test
-    public void getReferencesEmptyWiki() throws Exception
+    void getReferencesEmptyWiki() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(wikiReference2);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.wikiReference2);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(0));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(0));
     }
 
     @Test
-    public void getReferencesWiki() throws Exception
+    void getReferencesWiki() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(wikiReference1);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.wikiReference1);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(12));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(12));
 
         assertThat(
             result,
-            containsInAnyOrder(classReference111, documentReference112, documentReference113, documentReference113RO,
-                documentReference121, attachmentReference1211, attachmentReference1212, documentReference122,
-                objectReference1221, objectReference1222, propertyReference12221, propertyReference12223));
+            containsInAnyOrder(this.classReference111, this.documentReference112, this.documentReference113,
+                this.documentReference113RO, this.documentReference121, this.attachmentReference1211,
+                this.attachmentReference1212, this.documentReference122, this.objectReference1221,
+                this.objectReference1222, this.propertyReference12221, this.propertyReference12223));
     }
 
     @Test
-    public void getReferencesSpaceReference() throws Exception
+    void getReferencesSpaceReference() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(spaceReference11);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.spaceReference11);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(4));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(4));
 
         assertThat(
             result,
-            containsInAnyOrder((EntityReference) classReference111, (EntityReference) documentReference112,
-                (EntityReference) documentReference113, (EntityReference) documentReference113RO));
+            containsInAnyOrder((EntityReference) this.classReference111, (EntityReference) this.documentReference112,
+                (EntityReference) this.documentReference113, (EntityReference) this.documentReference113RO));
     }
 
     @Test
-    public void getReferencesEmptyDocument() throws Exception
+    void getReferencesEmptyDocument() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(documentReference112);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.documentReference112);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(1));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(1));
 
-        Assert.assertEquals(documentReference112, result.iterator().next());
+        assertEquals(this.documentReference112, result.iterator().next());
     }
 
     @Test
-    public void getReferencesTranslatedDocument() throws Exception
+    void getReferencesTranslatedDocument() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(documentReference113);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.documentReference113);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(2));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(2));
 
         assertThat(result,
-            containsInAnyOrder((EntityReference) documentReference113, (EntityReference) documentReference113RO));
+            containsInAnyOrder((EntityReference) this.documentReference113,
+                (EntityReference) this.documentReference113RO));
     }
 
     @Test
-    public void getReferencesDocumentWithAttachments() throws Exception
+    void getReferencesDocumentWithAttachments() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(documentReference121);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.documentReference121);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(3));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(3));
 
-        assertThat(result, containsInAnyOrder(documentReference121, attachmentReference1211, attachmentReference1212));
+        assertThat(result, containsInAnyOrder(this.documentReference121, this.attachmentReference1211,
+            this.attachmentReference1212));
     }
 
     @Test
-    public void getReferencesDocumentWithObjects() throws Exception
+    void getReferencesDocumentWithObjects() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(documentReference122);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.documentReference122);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(5));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(5));
 
         assertThat(
             result,
-            containsInAnyOrder(documentReference122, objectReference1221, propertyReference12221,
-                propertyReference12223, objectReference1222));
+            containsInAnyOrder(this.documentReference122, this.objectReference1221, this.propertyReference12221,
+                this.propertyReference12223, this.objectReference1222));
     }
 
     @Test
-    public void getReferencesAttachment() throws Exception
+    void getReferencesAttachment() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(attachmentReference1211);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.attachmentReference1211);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(1));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(1));
 
-        Assert.assertEquals(attachmentReference1211, result.iterator().next());
+        assertEquals(this.attachmentReference1211, result.iterator().next());
     }
 
     @Test
-    public void getReferencesEmptyObject() throws Exception
+    void getReferencesEmptyObject() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(objectReference1221);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.objectReference1221);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(1));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(1));
 
-        Assert.assertEquals(objectReference1221, result.iterator().next());
+        assertEquals(this.objectReference1221, result.iterator().next());
     }
 
     @Test
-    public void getReferencesObject() throws Exception
+    void getReferencesObject() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(objectReference1222);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.objectReference1222);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(3));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(3));
 
-        assertThat(result, containsInAnyOrder(objectReference1222, propertyReference12221, propertyReference12223));
+        assertThat(result, containsInAnyOrder(this.objectReference1222, this.propertyReference12221,
+            this.propertyReference12223));
     }
 
     @Test
-    public void getReferencesProperty() throws Exception
+    void getReferencesProperty() throws Exception
     {
-        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(propertyReference12221);
+        Iterable<EntityReference> result = this.defaultSolrReferenceResolver.getReferences(this.propertyReference12221);
 
-        Assert.assertNotNull(result);
-        assertThat(result, Matchers.<EntityReference> iterableWithSize(1));
+        assertNotNull(result);
+        assertThat(result, Matchers.<EntityReference>iterableWithSize(1));
 
-        Assert.assertEquals(propertyReference12221, result.iterator().next());
+        assertEquals(this.propertyReference12221, result.iterator().next());
     }
 
     // getId
 
     @Test
-    public void getIdLocaleInReference() throws Exception
+    void getIdLocaleInReference() throws Exception
     {
         // Locale provided in the reference
-        DocumentReference reference = new DocumentReference("wiki", "space", "name", new Locale("en"));
+        DocumentReference reference = new DocumentReference("wiki", "space", "name", Locale.ENGLISH);
 
         // Call
         String id = this.defaultSolrReferenceResolver.getId(reference);
 
         // Assert
-        Assert.assertEquals("wiki:space.name_en", id);
+        assertEquals("wiki:space.name_en", id);
     }
 
     @Test
-    public void getIdLocaleInDatabase() throws Exception
+    void getIdLocaleInDatabase() throws Exception
     {
-        when(xdocument111.getRealLocale()).thenReturn(Locale.FRENCH);
+        when(this.xdocument111.getRealLocale()).thenReturn(Locale.FRENCH);
 
         // Call
         String id = this.defaultSolrReferenceResolver.getId(this.documentReference111);
 
         // Assert and verify
-        Assert.assertEquals(this.documentReference111 + "_fr", id);
+        assertEquals(this.documentReference111 + "_", id);
     }
 
     // getQuery
 
     @Test
-    public void getQueryWiki() throws Exception
+    void getQueryWiki() throws Exception
     {
-        Assert.assertEquals("wiki:wiki1", this.defaultSolrReferenceResolver.getQuery(wikiReference1));
+        assertEquals("wiki:wiki1", this.defaultSolrReferenceResolver.getQuery(this.wikiReference1));
     }
 
     @Test
-    public void getQuerySpace() throws Exception
+    void getQuerySpace() throws Exception
     {
-        Assert.assertEquals("wiki:wiki1 AND space_exact:space11.data",
-            this.defaultSolrReferenceResolver.getQuery(spaceReference11));
+        assertEquals("wiki:wiki1 AND space_exact:space11.data",
+            this.defaultSolrReferenceResolver.getQuery(this.spaceReference11));
     }
 
     @Test
-    public void getQueryDocument() throws Exception
+    void getQueryDocument() throws Exception
     {
-        Assert.assertEquals("wiki:wiki1 AND space_exact:space11.data AND name_exact:class111",
-            this.defaultSolrReferenceResolver.getQuery(documentReference111));
+        assertEquals("wiki:wiki1 AND space_exact:space11.data AND name_exact:class111",
+            this.defaultSolrReferenceResolver.getQuery(this.documentReference111));
     }
 
     @Test
-    public void getQueryObject() throws Exception
+    void getQueryObject() throws Exception
     {
-        Assert.assertEquals("wiki:wiki1" + " AND space_exact:space12.code AND name_exact:document122"
+        assertEquals("wiki:wiki1" + " AND space_exact:space12.code AND name_exact:document122"
             + " AND class:space11.data.class111 AND number:0",
-            this.defaultSolrReferenceResolver.getQuery(objectReference1221));
+            this.defaultSolrReferenceResolver.getQuery(this.objectReference1221));
     }
 
     @Test
-    public void getQueryObjectProperty() throws Exception
+    void getQueryObjectProperty() throws Exception
     {
-        Assert.assertEquals(
+        assertEquals(
             "id:wiki1\\:space12.code.document122\\^space11.data.class111\\[1\\].aStringProperty",
-            this.defaultSolrReferenceResolver.getQuery(propertyReference12221));
+            this.defaultSolrReferenceResolver.getQuery(this.propertyReference12221));
     }
 
     @Test
-    public void getQueryAttachment() throws Exception
+    void getQueryAttachment() throws Exception
     {
-        Assert.assertEquals("id:wiki1\\:space12.code.document121@attachment1211.ext",
-            this.defaultSolrReferenceResolver.getQuery(attachmentReference1211));
+        assertEquals("id:wiki1\\:space12.code.document121@attachment1211.ext",
+            this.defaultSolrReferenceResolver.getQuery(this.attachmentReference1211));
     }
 }
